@@ -1,7 +1,7 @@
 {
   "name": "simp-nfs",
-  "version": "4.5.3",
-  "author": "simp",
+  "version": "5.0.0",
+  "author": "SIMP Team",
   "summary": "manages NFS server and client, also PKI and stunnelling",
   "license": "Apache-2.0",
   "source": "https://github.com/simp/pupmod-simp-nfs",
@@ -15,32 +15,36 @@
   ],
   "dependencies": [
     {
+      "name": "simp/autofs",
+      "version_requirement": ">= 5.0.0 < 6.0.0"
+    },
+    {
       "name": "herculesteam/augeasproviders_sysctl",
       "version_requirement": ">= 2.1.0 < 3.0.0"
     },
     {
       "name": "simp/iptables",
-      "version_requirement": ">= 4.1.4 < 5.0.0"
+      "version_requirement": ">= 4.1.5 < 5.0.0"
     },
     {
       "name": "simp/krb5",
-      "version_requirement": ">= 5.0.7 < 6.0.0"
+      "version_requirement": ">= 5.0.8 < 6.0.0"
     },
     {
       "name": "simp/simpcat",
-      "version_requirement": ">= 5.0.1 < 6.0.0"
+      "version_requirement": ">= 6.0.0 < 7.0.0"
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 1.3.1 < 2.0.0"
+      "version_requirement": ">= 2.0.0 < 3.0.0"
     },
     {
       "name": "simp/stunnel",
-      "version_requirement": ">= 4.2.8 < 5.0.0"
+      "version_requirement": ">= 5.0.0 < 6.0.0"
     },
     {
       "name": "simp/sysctl",
-      "version_requirement": ">= 4.2.0 < 5.0.0"
+      "version_requirement": ">= 4.2.1 < 5.0.0"
     }
   ],
   "operatingsystem_support": [
